fix: investment timeline behavior

--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -36,6 +36,11 @@ table td.activeIcon > i:not(.fa-spinner) {
     cursor: pointer;
 }
 
+/* Customize the layout and design of search results */
+ul.search-result-list {
+    padding-inline-start: 20px;
+}
+
 /* Font Awesome Icons as bullet list for search result */
 ul.custom-fa-bullet-list {
     list-style: none;
@@ -47,16 +52,16 @@ ul.search-result-list li {
 
 ul.search-result-list li.active:before {
     font-family: 'Font Awesome 6 Free';
-    content: '\f111';
+    content: '\f058';
     margin:0 5px 0 -15px;
-    color: #00a65a;
+    color: var(--cui-success);
 }
 
 ul.search-result-list li.inactive:before {
     font-family: 'Font Awesome 6 Free';
-    content: '\f10c';
+    content: '\f28b';
     margin:0 5px 0 -15px;
-    color: #d33724;
+    color: var(--cui-danger)
 }
 
 // Workaround for dataTables length select, and generic search placement
@@ -179,7 +184,7 @@ div.card-header > div.card-title {
     --cui-sidebar-nav-link-bg: transparent;
     --cui-sidebar-nav-link-icon-color: rgba(44, 56, 74, 0.681);
     --cui-sidebar-nav-link-hover-color: rgba(44, 56, 74, 0.95);
-    --cui-sidebar-nav-link-hover-bg: theme-color("primary");
+    --cui-sidebar-nav-link-hover-bg: var(--cui-primary);
     --cui-sidebar-nav-link-hover-icon-color: rgba(44, 56, 74, 0.95);
     --cui-sidebar-nav-link-active-color: rgba(44, 56, 74, 0.95);
     --cui-sidebar-nav-link-active-bg: rgba(255, 255, 255, 0.05);
@@ -203,4 +208,11 @@ div.card-header > div.card-title {
     font-size: 1.5rem;
     font-weight: bold;
     color: var(--cui-sidebar-color);
+}
+
+// Timeline chart placeholder
+#chart-placeholder {
+    background-color: var(--cui-secondary-bg);
+    color: var(--cui-secondary-color);
+    font-size: 18px;
 }
