--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15241,6 +15241,18 @@ td.dt-nowrap {
   display: none;
 }
 
+table.dataTable tr .hover-icon {
+  opacity: 0;
+  transition: opacity 0.2s ease-out;
+  cursor: pointer;
+  transition-delay: 0.2s;
+}
+
+table.dataTable tr:hover .hover-icon {
+  opacity: 1;
+  transition-delay: 0s;
+}
+
 table button:not(.busy) i.fa-spinner {
   display: none;
 }
