--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -23,6 +23,19 @@ td.dt-nowrap {
     display: none;
 }
 
+// Show/hide dataTables actions icon based on the row hover state
+table.dataTable tr .hover-icon {
+    opacity: 0;
+    transition: opacity .2s ease-out;
+    cursor: pointer;
+    transition-delay: .2s;
+}
+
+table.dataTable tr:hover .hover-icon {
+    opacity: 1;
+    transition-delay: 0s;
+}
+
 // Hide/show spinner for busy/idle button in DataTables
 table button:not(.busy) i.fa-spinner {
     display: none;
