--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,7 +17,7 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic');
 
 // Datatables
-@import "~datatables.net-bs5/css/dataTables.bootstrap5.css";
+@import "datatables.net-bs5/css/dataTables.bootstrap5.css";
 
 // Date picker
 @import '../../node_modules/vanillajs-datepicker/dist/css/datepicker-bs5.css';
@@ -26,8 +26,8 @@
 @import 'v-calendar/dist/style.css';
 
 // Font Awesome
-$fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
-@import '~@fortawesome/fontawesome-free/scss/fontawesome';
-@import '~@fortawesome/fontawesome-free/scss/solid';
-@import '~@fortawesome/fontawesome-free/scss/regular';
-@import '~@fortawesome/fontawesome-free/scss/brands';
+$fa-font-path: '@fortawesome/fontawesome-free/webfonts';
+@import '@fortawesome/fontawesome-free/scss/fontawesome';
+@import '@fortawesome/fontawesome-free/scss/solid';
+@import '@fortawesome/fontawesome-free/scss/regular';
+@import '@fortawesome/fontawesome-free/scss/brands';
